--- a/notion-clone/package.json
+++ b/notion-clone/package.json
@@ -25,14 +25,17 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "convex": "^1.8.0",
+    "emoji-picker-react": "^4.7.12",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^2.12.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
